Target Java 17 in the external signalling module